2002-08-09  Keith Seitz  <keiths@redhat.com>

	* gdbmi.texinfo: Document selected-frame-changed, register-update,
	and context-changed events.

2002-08-09  Keith Seitz  <keiths@redhat.com>

	* gdbmi.texinfo (-data-list-register-names): Document "-numbers"
	option.
	* mi-main.c (mi_cmd_data_list_register_names): Add "-numbers"
	option.

2002-08-09  Keith Seitz  <keiths@redhat.com>

        * mi-interp.c (mi_event_handlers): Add context_changed event
        handler.
	(mi_command_loop): Remove big block of code repeated in 
	mi_interpreter_resume. I don't think this is needed.
        (mi_insert_notify_hooks): Remove context_hook.
        (mi_remove_notify_hooks): Likewise.
        * mi-events.c (mi_context_changed): New function.
        * mi.h (mi_context_changed): Add declaration.

2002-07-25  Keith Seitz  <keiths@redhat.com>

	* mi-interp.c (mi_event_handlers): Add selected_frame_level_changed
	handler.
	(mi_insert_notify_hooks): Remove breakpoint hooks and frame
	changed hook.
	(mi_remove_notify_hooks): Likewise.
	* mi-events.c (mi_selected_frame_level_changed): New function.
	(mi_interp_frame_changed_hook): Remove.
	(mi_interp_create_breakpoint_hook): Remove.
	(mi_interp_modify_breakpoint_hook): Remove.
	(mi_interp_delete_breakpoint_hook): Remove.
	* mi.h (mi_selected_frame_level_changed): Add declaration.
        (mi_interp_create_breakpoint_hook): Remove declaration.
        (mi_interp_modify_breakpoint_hook): Remove declaration.
        (mi_interp_delete_breakpoint_hook): Remove declaration.
	* mi-cmd-stack.c (mi_cmd_stack_select_frame): If the stack level changes,
	issue a selected_frame_level_changed event.

2002-07-22  Keith Seitz  <keiths@redhat.com>

	* mi-events.c (mi_register_update): New function.
	* mi-interp.c (mi_event_handlers): Add mi_register_update
	event handler.
	* mi.h (mi_register_update): Add declaration.
	
2002-06-24  Keith Seitz  <keiths@redhat.com>

	* mi-cmds.h (mi_execute_command): Add "extern".