@@ -1,3 +1,10 @@
+2002-08-13  Keith Seitz  <keiths@redhat.com>
+
+	* mi-interp.c (mi_cmd_interpreter_set): Remove. We're not going
+	to allow this.
+	* mi-cmds.c: Remove "interpreter-set" command.
+	* mi-cmds.h (mi_cmd_interpreter_set): Remove.
+
 2002-08-09  Keith Seitz  <keiths@redhat.com>
 
 	* gdbmi.texinfo: Document selected-frame-changed, register-update,
